--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ body {
   top: -13px;
   display: inline-block;
   margin-left: 60px;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
   font-family: "Gilroy", Tahoma, sans-serif;
   font-size: 48px;
   font-weight: 700;
@@ -76,17 +76,22 @@ body {
   align-items: flex-start;
   margin-left: 60px;
   margin-right: 60px;
-  margin-bottom: 27px;
+  margin-bottom: 25px;
 }
 
 .header-panel-form {
   display: flex;
+  margin-top: -6px;
 }
 
 .links-wrapper {
   width: 500px;
   display: flex;
   justify-content: space-between;
+}
+
+.site-header .links-wrapper {
+  padding-top: 2px;
 }
 
 .search-label {
@@ -100,13 +105,13 @@ body {
 .search-field {
   width: 355px;
   padding-left: 36px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 15px;
+  padding-bottom: 17px;
   margin-left: 4px;
   background-color: #f7e296;
   background-image: url("../img/svg/search.svg");
   background-repeat: no-repeat;
-  background-position-y: 9px;
+  background-position-y: 17px;
   background-position-x: left;
   border: none;
   font-weight: 300;
@@ -115,16 +120,14 @@ body {
 
 .search-btn {
   display: none;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 12px;
-  padding-bottom: 12px;
+  padding-left: 18px;
+  padding-right: 18px;
   background-color: #f7e296;
   border: 2px solid #000000;
 }
 
 .search-field:focus {
-  padding-bottom: 8px;
+  padding-bottom: 15px;
   border-bottom: 2px solid #000000;
 }
 
@@ -1107,20 +1110,18 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
 }
 
 .modal-write-us {
-
   position: fixed;
   top: 50%;
   left: 50%;
 
-  margin-top: -280px;
-  margin-left: -390px;
   background-color: #ffffff;
+  box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2);
 
   font-family: "Open Sans", Arial, sans-serif;
   font-size: 14px;
   font-weight: 400;
 
-  box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2);
+  transform: translate(-50%, -50%);
 }
 
 .write-us-form {
@@ -1205,9 +1206,9 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
 
   width: 960px;
   height: 560px;
-  margin-top: -280px;
-  margin-left: -390px;
+
   box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2);
+  transform: translate(-50%, -50%);
 }
 
 .modal-map iframe {
@@ -1818,18 +1819,18 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
 
 @keyframes bounce {
   0% {
-    transform: translateY(-2000px);
+    transform: translate(-50%, -2000px);
   }
 
   70% {
-    transform: translateY(30px);
+    transform: translate(-50%, 30px);
   }
 
   90% {
-    transform: translateY(-10px);
+    transform: translate(-50%, -10px);
   }
 
   100% {
-    transform: translateY(0);
+    transform: translate(-50%, 0);
   }
 }
